--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,6 +2,9 @@ on: push
 jobs:
   terraform:
     runs-on: ubuntu-latest
+    env: 
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     steps:
       - name: checkout
         uses: actions/checkout@v6
@@ -10,14 +13,6 @@ jobs:
           terraform_version: "1.1.7"
       - name: terraform-init
         run: terraform init
-
-  terraform-ubuntu-22:
-    runs-on: ubuntu-22.04
-    steps:
-      - name: checkout
-        uses: actions/checkout@v6
-      - uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: "1.1.7"
-      - name: terraform-init
-        run: terraform init
+      - name: terraform-plan
+        run: terraform plan
+      
