--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,8 +14,8 @@ jobs:
       - name: terraform-init
         run: terraform init
       - name: terraform-plan
-        run: terraform plan
+        run: terraform plan -out=tfplan
       - name: terraform-apply
-        run: terraform apply
+        run: terraform apply "tfplan" 
 
       
