--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,10 +12,10 @@ jobs:
         with:
           terraform_version: "1.1.7"
       - name: terraform-init
-        run: terraform init
+        run: terraform init -backend-config="./state.config
       - name: terraform-plan
         run: terraform plan -out=tfplan
       - name: terraform-apply
-        run: terraform apply "tfplan" 
+        run: terraform apply "tfplan"
 
       
