--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,7 +12,7 @@ jobs:
         with:
           terraform_version: "1.1.7"
       - name: terraform-init
-        run: terraform init -backend-config="./state.config
+        run: terraform init
       - name: terraform-plan
         run: terraform plan -out=tfplan
       - name: terraform-apply
