--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,6 +5,7 @@ jobs:
     env: 
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_DEFAULT_REGION: us-east-1
     steps:
       - name: checkout
         uses: actions/checkout@v6
@@ -13,9 +14,11 @@ jobs:
           terraform_version: "1.1.7"
       - name: terraform-init
         run: terraform init
+      - name: terraform-validate
+        run: terraform validate
       - name: terraform-plan
         run: terraform plan -out=tfplan
       - name: terraform-apply
-        run: terraform apply "tfplan"
+        run: terraform apply -auto-approve tfplan
 
       
